force-app/main/default/objects/QRBillSetting__c/QRBillSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>QR Bill Setting</label>
</CustomObject>