force-app/main/default/objects/QRBillSetting__c/fields/Document_Format__c.field-meta.xml
<CustomField>
    <fullName>Document_Format__c</fullName>
    <label>Document Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>