force-app/main/default/objects/QRBillSetting__c/fields/Has_Debtor_Information__c.field-meta.xml
<CustomField>
    <fullName>Has_Debtor_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Debtor Information</label>
    <type>Checkbox</type>
</CustomField>