force-app/main/default/objects/QRBillSetting__c/fields/Output_Size__c.field-meta.xml
<CustomField>
    <fullName>Output_Size__c</fullName>
    <label>Output Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>