force-app/main/default/objects/QRBillSetting__c/fields/Paper_Format__c.field-meta.xml
<CustomField>
    <fullName>Paper_Format__c</fullName>
    <label>Paper Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>