force-app/main/default/objects/QRBillSetting__c/fields/Separator_Lines__c.field-meta.xml
<CustomField>
    <fullName>Separator_Lines__c</fullName>
    <label>Separator Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>